src/objects/DD_Provider_Address__c.object
<CustomObject>
    <fields>
        <fullName>DD_Address_Type__c</fullName>
        <label>Address Type</label>
        <picklist>
            <picklistValues>
                <fullName>Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mailing</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DD_Address__c</fullName>
        <label>Address</label>
        <referenceTo>DD_Address__c</referenceTo>
        <relationshipLabel>Address Providers</relationshipLabel>
        <relationshipName>DD_Address_Providers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DD_Provider__c</fullName>
        <label>Provider</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Provider Addresses</relationshipLabel>
        <relationshipName>DD_Provider_Addresses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Provider Address</label>
    <nameField>
        <displayFormat>PA-{00000}</displayFormat>
        <label>Provider Address ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Provider Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>